--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>LEAP - Study Abroad Operating System</title>
-  <meta name="description" content="Your personal IELTS preparation and study abroad application platform">
-  <meta name="keywords" content="IELTS, study abroad, university applications, test prep">
+  <title>🍄 LEAP - Retro Study Quest 🎮</title>
+  <meta name="description" content="Your retro-style IELTS preparation and study abroad adventure platform">
+  <meta name="keywords" content="IELTS, study abroad, university applications, test prep, retro gaming">
+  <meta name="theme-color" content="#FF0000">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rye&family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/components/components.css">
