--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="/components/feed-styles.css">
   <link rel="stylesheet" href="/components/auth-styles.css">
   <link rel="stylesheet" href="/components/college-dashboard.css">
+  <link rel="stylesheet" href="/components/profile-styles.css">
   <link rel="stylesheet" href="/styles/typography.css">
 </head>
 
