--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="stylesheet" href="/components/auth-styles.css">
   <link rel="stylesheet" href="/components/college-dashboard.css">
   <link rel="stylesheet" href="/components/profile-styles.css">
+  <link rel="stylesheet" href="/components/dashboard-styles.css">
+  <link rel="stylesheet" href="/components/photo-upload-styles.css">
   <link rel="stylesheet" href="/styles/typography.css">
 </head>
 
