Final polish: New branding, dark background, comprehensive README
- Updated title to 'LEAP - Level Up Your IELTS Game '
- Added catchy meta description for better SEO
- Created comprehensive README with:
  * Installation instructions
  * Features breakdown
  * Tech stack details
  * Usage guide
  * Deployment instructions
  * Contributing guidelines
  * Roadmap
- Added dark gradient background (#1a1a2e to #16213e)
- Added pixel pattern overlay for depth
- Better UI contrast with dark blur background
- Build tested: 70.21 kB gzipped

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>🍄 LEAP - Retro Study Quest 🎮</title>
-  <meta name="description" content="Your retro-style IELTS preparation and study abroad adventure platform">
-  <meta name="keywords" content="IELTS, study abroad, university applications, test prep, retro gaming">
+  <title>LEAP - Level Up Your IELTS Game 🎮</title>
+  <meta name="description"
+    content="Where IELTS prep meets gaming. Swipe, compete, and achieve your study abroad dreams with gamified learning.">
+  <meta name="keywords"
+    content="IELTS, study abroad, university applications, test prep, retro gaming, gamified learning">
   <meta name="theme-color" content="#FF0000">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
