feat: Add Phase 1.5 enhanced features
New Systems Added:
- Notification service (browser notifications, daily reminders)
- Achievement system (18 badges across 5 categories)
- Daily challenges (5 types with rewards)
- Pomodoro study timer (25/5 min cycles)
- Sound effects system (8-bit retro sounds)
- Neumorphic accent styles (subtle modern depth)

Features:
- Browser notifications for streaks, achievements, rivals
- 18 achievements: practice, streak, league, mastery, special
- 5 daily challenges with momentum & coin rewards
- Pomodoro timer with work/break cycles
- Web Audio API for retro 8-bit sounds
- Neumorphic cards blend modern + retro aesthetics

Files Added:
- js/notification-service.js
- js/achievement-system.js
- js/daily-challenge-system.js
- js/study-timer.js
- js/sound-effects.js
- styles/neumorphic-accents.css

Updated:
- index.html (added neumorphic CSS)
- README.md (Phase 1.5 features)
- task.md (Phase 1.5 complete)

Build: 70.21 kB gzipped

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/components/dashboard-styles.css">
   <link rel="stylesheet" href="/components/photo-upload-styles.css">
   <link rel="stylesheet" href="/styles/typography.css">
+  <link rel="stylesheet" href="/styles/neumorphic-accents.css">
 </head>
 
 <body>
