--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>LEAP - Level Up Your IELTS Game 🎮</title>
+  <title>XLR8 - Accelerate Your IELTS Journey 🚀</title>
   <meta name="description"
-    content="Where IELTS prep meets gaming. Swipe, compete, and achieve your study abroad dreams with gamified learning.">
+    content="Accelerate your IELTS prep with gamified learning. Swipe, compete, and achieve your study abroad dreams faster.">
   <meta name="keywords"
-    content="IELTS, study abroad, university applications, test prep, retro gaming, gamified learning">
+    content="XLR8, IELTS, study abroad, university applications, test prep, retro gaming, gamified learning, accelerate">
   <meta name="theme-color" content="#FF0000">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,6 +24,11 @@
   <link rel="stylesheet" href="/components/profile-styles.css">
   <link rel="stylesheet" href="/components/dashboard-styles.css">
   <link rel="stylesheet" href="/components/photo-upload-styles.css">
+  <link rel="stylesheet" href="/components/rivals-styles.css">
+  <link rel="stylesheet" href="/components/creator-feed-styles.css">
+  <link rel="stylesheet" href="/components/alumni-connect-styles.css">
+  <link rel="stylesheet" href="/components/application-tracker-styles.css">
+  <link rel="stylesheet" href="/components/academic-profile-styles.css">
   <link rel="stylesheet" href="/styles/typography.css">
   <link rel="stylesheet" href="/styles/neumorphic-accents.css">
 </head>
