Simplify codebase for PM internship submission - Remove complex features (rivals, alumni, creators, college integration) - Remove Supabase, add MySQL schema - Update branding and documentation - Create submission document

--- a/index.html
+++ b/index.html
@@ -5,33 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>XLR8 - Accelerate Your IELTS Journey 🚀</title>
+  <title>IELTS Prep - Daily Practice Tracker</title>
   <meta name="description"
-    content="Accelerate your IELTS prep with gamified learning. Swipe, compete, and achieve your study abroad dreams faster.">
-  <meta name="keywords"
-    content="XLR8, IELTS, study abroad, university applications, test prep, retro gaming, gamified learning, accelerate">
-  <meta name="theme-color" content="#FF0000">
+    content="Build consistent IELTS study habits with daily practice sessions and progress tracking.">
+  <meta name="keywords" content="IELTS, test prep, study habits, practice tracker">
+  <meta name="theme-color" content="#4F46E5">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rye&family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/components/components.css">
   <link rel="stylesheet" href="/components/feed-styles.css">
   <link rel="stylesheet" href="/components/auth-styles.css">
-  <link rel="stylesheet" href="/components/college-dashboard.css">
   <link rel="stylesheet" href="/components/profile-styles.css">
   <link rel="stylesheet" href="/components/dashboard-styles.css">
   <link rel="stylesheet" href="/components/photo-upload-styles.css">
-  <link rel="stylesheet" href="/components/rivals-styles.css">
-  <link rel="stylesheet" href="/components/creator-feed-styles.css">
-  <link rel="stylesheet" href="/components/alumni-connect-styles.css">
-  <link rel="stylesheet" href="/components/application-tracker-styles.css">
-  <link rel="stylesheet" href="/components/academic-profile-styles.css">
-  <link rel="stylesheet" href="/components/college-search-styles.css">
-  <link rel="stylesheet" href="/styles/typography.css">
-  <link rel="stylesheet" href="/styles/neumorphic-accents.css">
 </head>
 
 <body>
